# python-workshop-codespace-template

./: .coverage  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
day1/demos/: static_type_checks.py
day1/project_structure/: .pre-commit-config.yaml
day1/project_structure/src/claims_analysis/: __init__.py
day1/project_structure/tests/: test_transformations.py
demos/: idioms.ipynb  standard_library.ipynb
notebooks/: claims_analysis.ipynb
src/claims_analysis/: __init__.py  transformations.py
tests/: test_transformations.py
