[project]
name = "claims-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nemanja Radojković", email = "radojkovic.n@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.3.3",
]

[project.scripts]
claims-analysis = "claims_analysis:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest-cov>=7.1.0",
]
